# Spin-dependent-d-band-center-App

./: README.md  README.mod  d-band.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/spin_dependent_d_band_center/: main.py
