
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Spin-dependent-d-band-center"   # MUST match PyPI project name
version = "0.1.0"
description = "Package for spin-dependent d-band center app"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Satadeep Bhattacharjee", email = "satadeep24@gmail.com" }
]
dependencies = [
  # add e.g. "numpy>=1.25"
]
